# Redbench

./: .gitignore  README.md  pyproject.toml
configs/: config_gen_imdb_prov.json  config_gen_tpch.json  config_gen_tpch_setup.json  config_match_imdb.json  config_match_tpch.json
report/: md_to_pdf.py  report_redbench_workload_analysis.md
scripts/: analyze_cluster.py  analyze_filters.py  analyze_filters_full.py  analyze_matching.py  analyze_periodicity_decomposed.py  analyze_proportional_shift.py  analyze_qig_patterns.py  analyze_qig_patterns_v2.py  analyze_selectivity.py  run_multi_cluster.sh  run_prov_sampled.sh  run_prov_screen.sh  run_provisioned.sh  run_tpch_all.sh  sample_provisioned.py  screen_provisioned.py  screen_qig_longevity.py  screen_recurring_jsd.py  setup_tpch.py
src/redbench/generation/dataset_input/: retrieve_statistics.py
src/redbench/generation/query_builder/: gen_wl_weighted_sampling.py  predicate_builder.py
src/redbench/matching/: run.py  utils.py
src/redbench/matching/benchmarks/: tpch.py
src/redbench/matching/gen_queries/: query_generator.py
src/redbench/utils/: load_and_preprocess_redset.py
