[project]
name = "redbench"
version = "1.0.0"
description = "Redbench: Workload Synthesis From Cloud Traces - a TU Darmstadt & UTN benchmark"
dependencies = [
    "tqdm>=4.67.1",
    "pandas>=2.2.0,<2.3",
    "numpy>=1.26.0,<2.1",
    "duckdb>=1.1.0,<1.4",
    "matplotlib>=3.9.0,<3.11",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "orjson>=3.10.18",
    "osfclient>=0.0.5",
    "hillmapper>=0.1.1",
    "ipykernel>=6.30.1",
    "pyarrow>=17.0.0,<18",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/redbench"]

[dependency-groups]
test = ["pytest", "pytest-cov"]